@@ -25,6 +25,8 @@ extern int pminus1_factor(UV n, UV *factors, UV B1, UV B2);
 extern int _XS_miller_rabin(UV n, const UV *bases, int nbases);
 extern int _XS_is_prob_prime(UV n);
 
+extern UV _XS_divisor_sum(UV n);
+
 static UV gcd_ui(UV x, UV y) {
   UV t;
   if (y < x) { t = x; x = y; y = t; }
